<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewMenuInicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Nome do usuÃ¡rio (SharedPreferences) no topo -->
        <TextView
            android:id="@+id/tvNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_padrao"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingBottom="12dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagem_ilustrativa_da_tela_principal"
            android:src="@drawable/menulogo"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/buttonCriarDenunciaMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/azul_login"
            android:text="@string/criarDenuncia"
            android:textStyle="bold"
            android:contentDescription="@string/criar_nova_den_ncia" />

        <Button
            android:id="@+id/buttonMinhasDenunciasMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/azul_login"
            android:contentDescription="@string/acessar_minhas_den_ncias"
            android:text="@string/minhasDenuncias"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonVerLocaisMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/azul_login"
            android:text="@string/ver_locais"
            android:textStyle="bold"
            android:contentDescription="@string/ver_locais_acess_veis" />
    </LinearLayout>
</ScrollView>
