<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:accessibilityLiveRegion="polite"
    android:background="@drawable/borda"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFotoUsuario"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/item_pergunta_foto"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/textNomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:text="@string/item_pergunta_nome"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_pergunta_titulo"
        android:textColor="#000"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/layoutRespostas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/item_respostas_titulo"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/editResposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_resposta_hint"
        android:importantForAccessibility="yes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnResponder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/azul_login"
        android:contentDescription="@string/item_responder_cd"
        android:text="@string/item_responder"
        android:textColor="@android:color/white" />
</LinearLayout>
