<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_login"
    tools:ignore="Overdraw"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="36dp"
        android:importantForAccessibility="no"
        android:src="@drawable/novalogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:importantForAccessibility="yes"
        android:accessibilityHeading="true"
        android:text="@string/accessibility_report"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_ou_usu_rio"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextSenha"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/Button_Login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_white_rounded"
        android:contentDescription="@string/bot_o_para_fazer_login"
        android:text="@string/entrar"
        android:textColor="@color/azul_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/editTextSenha"
        app:layout_constraintStart_toStartOf="@id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@id/textViewEsqueceuSenha" />

    <TextView
        android:id="@+id/textViewTelaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/cd_criar_conta_link"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/criar_conta"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <TextView
        android:id="@+id/textViewEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_esqueceu_senha_link"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@id/editTextSenha" />


</androidx.constraintlayout.widget.ConstraintLayout>
