<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_login"
    tools:context=".CadastroUsuarioActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imagemPerfil"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imagem_do_perfil_do_usu_rio"
        app:riv_oval="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelecionImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_add"
        android:text="@string/alterar"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/selecionar_imagem_de_perfil"
        app:layout_constraintTop_toBottomOf="@id/imagemPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/editTextNome"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/baseline_person_24"
        android:hint="@string/nome_completo"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelecionImagem"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextSenha"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_eye"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextConfirmaSenha"
        style="@style/Edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:hint="@string/confirme_a_senha"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_eye"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCadastro"
        style="@style/Button_Login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/cadastrar"
        android:textColor="@color/azul_login"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/button_white_rounded"
        android:contentDescription="@string/bot_o_para_criar_conta"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmaSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewTelaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_possui_login_entrar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/buttonCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
